--- a/tournaments-api/tournaments-api.csproj
+++ b/tournaments-api/tournaments-api.csproj
@@ -18,7 +18,7 @@
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Contexts\" />
-    <Folder Include="Repositories\" />
     <Folder Include="Services\" />
+    <Folder Include="Interfaces\" />
   </ItemGroup>
 </Project>
