Implemented Endpoints For Teams

--- a/tournaments-api/appsettings.json
+++ b/tournaments-api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "mssql": "Server=localhost,1433;Database=tournaments;User=sa;Password=Pacalici21;"
+   "mssql": "Server=tcp:tournaments-server.database.windows.net,1433;Initial Catalog=tournaments;Persist Security Info=False;User ID=maimaduc;Password=Pacalici21;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
