--- a/tournaments-api/tournaments-api.csproj
+++ b/tournaments-api/tournaments-api.csproj
@@ -25,9 +25,7 @@
     <Folder Include="Contexts\" />
     <Folder Include="Services\" />
     <Folder Include="Interfaces\" />
-    <Folder Include="GraphQL\" />
-    <Folder Include="GraphQL\Users\" />
-    <Folder Include="GraphQL\Sports\" />
     <Folder Include="Models\" />
+    <Folder Include="Enums\" />
   </ItemGroup>
 </Project>
